@@ -11,3 +11,4 @@ t/3_version.t
 t/4_parse.t
 t/4_stc.t
 t/5_swift.t
+META.yml                                 Module meta-data (added by MakeMaker)
